# hfst-rs

./: .gitignore  Cargo.toml  LocAst-weighted.pmatch  Makefile  README.md  hfst-pmatch2fst-out.txt  streets-fr.pmatch
libhfst/: Cargo.toml
libhfst/src/: lib.rs
libs/bufparser/: Cargo.toml
libs/bufparser/src/: lib.rs
libs/hfst/: Cargo.toml
libs/hfst-fs/: Cargo.toml
libs/hfst-fs/src/: error.rs  lib.rs
libs/hfst-fs/src/streaming/: mod.rs
libs/hfst-ol/: Cargo.toml
libs/hfst-ol-parser/: Cargo.toml
libs/hfst-ol-parser/src/: lib.rs  transducer_header.rs
libs/hfst-ol-parser/src/streaming/: mod.rs  transducer_header.rs
libs/hfst-ol/src/: alphabet.rs  double_tape.rs  encoder.rs  lib.rs  transducer.rs  transitions.rs  tries.rs
libs/hfst-output/: Cargo.toml
libs/hfst-output/src/: lib.rs  olw.rs
libs/hfst/src/: lib.rs  output.rs  transducer.rs
libs/hfst/src/implementations/: hfst_basic_transducer.rs  hfst_basic_transition.rs  hfst_tropical_transducer_transition_data.rs  mod.rs
libs/hfst/tests/: test_examples.rs
libs/pmatch/: Cargo.toml
libs/pmatch-compiler/: Cargo.toml
libs/pmatch-compiler/src/: compiler.rs  lib.rs
libs/pmatch-serialize/: Cargo.toml
libs/pmatch-serialize/src/: alphabet.rs  lib.rs  transducer.rs
libs/pmatch-serialize/src/streaming/: alphabet.rs  mod.rs
libs/pmatch/src/: alphabet.rs  compiler.rs  container.rs  lib.rs  transducer.rs
scripts/: write_header.py
tests/data/: pmatch-streets-fr.txt
tools/hfst-pmatch/: Cargo.toml
tools/hfst-pmatch/src/: app.rs  args.rs  main.rs
tools/hfst-pmatch2fst/: Cargo.toml
tools/hfst-pmatch2fst/src/: app.rs  args.rs  main.rs
