[package]
name = "pmatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hfst = { path = "../hfst" }
hfst-ol = { path = "../hfst-ol" }
log = "0.4.14"
thiserror = "1.0.25"
unicode-segmentation = "1.7.1"
