[package]
name = "hfst-pmatch"
version = "0.1.0"
edition = "2021"
description = "perform matching/lookup on text streams"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.4"
eyre = "0.6.5"
log = "0.4.14"
pmatch = { path = "../../libs/pmatch" }
pmatch-serialize = { path = "../../libs/pmatch-serialize" }
[profile.release]
incremental = true
