[package]
name = "hfst-pmatch2fst"
version = "0.1.0"
edition = "2021"
description = "Compile regular expressions into transducer(s)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.4"
eyre = "0.6.5"
hfst = { path = "../../libs/hfst" }
hfst-output = { path = "../../libs/hfst-output" }
log = "0.4.14"
pmatch = { path = "../../libs/pmatch" }
